--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -208,10 +208,10 @@
     <string name="contents_detail_contract_text">このコンテンツをご覧になるには契約が必要です</string>
     <string name="dtv_content_service_start_text">dTVで視聴</string>
     <string name="dtv_content_service_start_dialog">dTVアプリを起動します</string>
-    <string name="dtv_content_service_update_dialog">dTVアプリのアップデートが必要です。</string>
+    <string name="dtv_content_service_update_dialog">ドコモテレビターミナルのdTVのバージョンアップが必要です</string>
     <string name="d_anime_store_content_service_start_text">dアニメストアで視聴</string>
     <string name="d_anime_store_content_service_start_dialog">dアニメストアアプリを起動します</string>
-    <string name="d_anime_store_content_service_update_dialog">dアニメストアアプリのアップデートが必要です。</string>
+    <string name="d_anime_store_content_service_update_dialog">ドコモテレビターミナルのdアニメストアのバージョンアップが必要です</string>
     <string-array name="other_service_contents_detail_tabs">
         <item>作品情報</item>
     </string-array>
@@ -222,7 +222,7 @@
     <string name="recording_reservation_complete_dialog_title">録画予約完了</string>
     <string name="recording_reservation_complete_dialog_msg">録画予約依頼を受け付けました。</string>
     <string name="recording_reservation_complete_dialog_ok">OK</string>
-    <string name="recording_reservation_failed_dialog_msg">録画予約失敗しました。</string>
+    <string name="recording_reservation_failed_dialog_msg">登録件数が一杯のため録画予約に失敗しました。</string>
     <string name="recording_reservation_failed_dialog_confirm">OK</string>
     <string name="recording_reservation_failed_dialog_token">トークン不一致</string>
     <string name="recording_reservation_failed_dialog_other">その他の異常</string>
@@ -230,14 +230,16 @@
     <string name="recording_reservation_failed_dialog_over">登録件数超過</string>
     <string name="recording_reservation_failed_dialog_no_agreement">未契約エラー</string>
     <string name="recording_reservation_confirm_dialog_title">録画予約確認</string>
-    <string name="recording_reservation_confirm_dialog_msg">この番組を録画予約します。\n宜しいでしょうか？</string>
+    <string name="recording_reservation_confirm_dialog_msg">録画予約しますか？</string>
     <string name="recording_reservation_confirm_dialog_confirm">録画予約する</string>
-    <string name="recording_reservation_confirm_dialog_cancel">録画予約しない</string>
+    <string name="recording_reservation_confirm_dialog_cancel">キャンセル</string>
     <string name="contents_detail_contract_text_vod">ご覧になるには購入が必要です。ドコモテレビターミナル側で購入してください。</string>
     <string name="contents_detail_contract_button_vod">ドコモテレビターミナルで購入する</string>
     <string name="contents_detail_contract_text_ch">このチャンネルをご覧になるにはドコモテレビターミナル側での契約が必要です。</string>
     <string name="contents_detail_contract_button_ch">ドコモテレビターミナルで契約する</string>
     <string name="contents_detail_external_display_dialog_msg">外部出力が検知されたため再生を停止します。</string>
+    <string name="contents_detail_parental_check_fail">年齢制限のため視聴できません。</string>
+    <string name="contents_player_bad_contents_info">コンテンツの情報が正しくないため再生できません</string>
 
     <!-- チャンネルリストタイトル -->
     <string name="channel_list_activity_title">チャンネルリスト</string>
