DREM-65  [DREM-33]アプリバージョンチェック
実装

Change-Id: I48bd09c2e320972e59ab63001e690575c93550d0

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -212,6 +212,8 @@
     <string name="d_anime_store_content_service_start_text">dアニメストアで視聴</string>
     <string name="d_anime_store_content_service_start_dialog">dアニメストアアプリを起動します</string>
     <string name="d_anime_store_content_service_update_dialog">ドコモテレビターミナルのdアニメストアのバージョンアップが必要です</string>
+    <string name="d_tv_terminal_application_version_update_dialog">ドコモテレビターミナルを操作したい場合は、ドコモテレビターミナルアプリをアップデートしてください。</string>
+    <string name="stb_application_version_update">ご利用のドコモテレビターミナルの最新版がありますドコモテレビターミナルのアップデートをしてください。</string>
     <string-array name="other_service_contents_detail_tabs">
         <item>作品情報</item>
     </string-array>
