--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -210,6 +210,7 @@
     <string name="d_anime_store_content_service_update_dialog">ドコモテレビターミナルのdアニメストアのバージョンアップが必要です</string>
     <string name="d_tv_terminal_application_version_update_dialog">ドコモテレビターミナルを操作したい場合は、ドコモテレビターミナルアプリをアップデートしてください。</string>
     <string name="stb_application_version_update">ご利用のドコモテレビターミナルの最新版がありますドコモテレビターミナルのアップデートをしてください。</string>
+    <string name="contents_detail_thumbnail_text">テレビで視聴できます</string>
     <string-array name="other_service_contents_detail_tabs">
         <item>作品情報</item>
     </string-array>
