DREM-1525 [実装]([DREM‐56]アプリ起動時の海外判定処理追加)実装（UI） DREM-1524 [実装]([DREM‐56]アプリ起動時の海外判定処理追加)実装(アプリケーションとしてのBG→FG判定)
・Applicationクラスの実装
・BaseActivityにて海外通信警告ダイアログを実装

Change-Id: I1f79f24bd620814ead437314e95a1acf546476f5

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -27,6 +27,9 @@
     <string name="parental_r_20">R20</string>
     <string name="common_text_close">閉じる</string>
     <string name="common_text_retry">リトライ</string>
+    <string name="transoceanic_communication_dialog_confirm">利用する</string>
+    <string name="transoceanic_communication_dialog_content">海外でのパケット通信は、日本国内とは異なる料金体系となりますのでご注意ください \n※通信料はご契約の通信会社提供のプランにより異なります。\n※Wi-Fi接続でご利用される場合はこの限りではありません。</string>
+    <string name="transoceanic_communication_dialog_title">海外通信の利用</string>
 
     <!-- Launch -->
     <string name="str_app_title">ドコモテレビターミナル</string>
