--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -242,6 +242,11 @@
     <!-- チャンネルリストタイトル -->
     <string name="channel_list_activity_title">チャンネルリスト</string>
 
+    <!-- ペアリング設定画面 -->
+    <string name="paring_setting_search_failed_text">ペアリング可能なデバイスが見つかりませんでした。</string>
+    <string name="paring_setting_search_help_text">STBとペアリングするには</string>
+    <string name="paring_setting_select_text">ペアリングするドコモテレビターミナルを選択</string>
+
     <!-- 設定画面 -->
     <string name="main_setting_d_account_message">dアカウントアプリがインストールされていません。\nインストールしますか？</string>
     <string name="main_setting_paring">ペアリング済み</string>
