--- a/dTVTerminalApp/dasho/TVTerminal.dox
+++ b/dTVTerminalApp/dasho/TVTerminal.dox
@@ -4,7 +4,7 @@
         <property name="projectname" value="dasho"/>
         <property name="ANDROID_BUILD_TOOLS_HOME" value="${sdk.dir}\build-tools\26.0.2"/>
         <property name="apkOutput" value="TVTerminal-obfuscated.apk"/>
-        <property name="apkInput" value="TVTerminal.apk"/>
+        <property name="apkInput" value="..\app\build\outputs\apk\TVTerminal.apk"/>
         <property name="sdk.dir" value="${ANDROID_SDK_DIR}"/>
         <property name="manifest.package" value="com.nttdocomo.android.tvterminalapp"/>
         <property name="dasho.results.dir" value="dasho-results_TVTerminal"/>
@@ -15,7 +15,7 @@
         <option>FORCE</option>
     </global>
     <inputpath>
-        <pathelement location="..\app\build\outputs\apk\TVTerminal.apk"/>
+        <pathelement location="${apkInput}"/>
     </inputpath>
     <globalProcessingExclude>
         <classes name="android.**"/>
