DREM-1547 [実装]([DREM-55-1] ひかりサーバからのサービストークン取得)実装
　下記の対応を行いました。
・サービストークンの取得に成功したので、実験用の処理の排除や実際のサービストークンの活用処理を追加しました。
・アプリ起動時にサービストークンの削除を行うようにしました。
・サービストークンをプレファレンスに記録する際は、暗号化した物を記録するようにしました。
・修正コミット後のプッシュが失敗したので、やり直しました。

Change-Id: I2a8658180de692da8e6d3bb010cc06eb17234d2f

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="parental_r_20">R20</string>
     <string name="common_text_close">閉じる</string>
     <string name="common_text_retry">リトライ</string>
+    <string name="save_token">トークンの保存を行います。</string>
 
     <!-- Launch -->
     <string name="str_app_title">ドコモテレビターミナル</string>
