DREM-1650[その他]([DREM-3-6]録画一覧(リモートブラウジング))アクティベート処理の自前実装
Change-Id: Ia3e7d7cafe644907b6cae4f20ae9c7888882c2cc

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -126,6 +126,8 @@
     <string name="record_download_cancel_title">ダウンロードを取りやめますか？</string>
     <string name="record_download_cancel_confirm">取りやめる</string>
     <string name="record_download_notification">録画番組をダウンロード中</string>
+    <string name="activation_confirm_dialog_title">アクティベーション実行の確認</string>
+    <string name="activation_failed_error">アクティベーション出来ませんでした。</string>
 
     <!-- ビデオ一覧 -->
     <string name="video_content_top_title">ビデオ</string>
