DREM-1653 ヘッダ部とステータスバーの赤色が少し異なっている
ステータスバーの色とヘッダーの色を同色になるように修正しました。
Styleのパラメータ変更により実現していますが、Android4.4では未対応のため別手法にて修正しています(各Activityへの変更はこれによるものです)。
Styleによる修正の方が綺麗に変更できるため、OSバージョンにて処理分けをしました。

初回起動画面は仮の画面ですが、独自のヘッダーが表示されており紛らわしかったため独自ヘッダーは削除しました。
ビデオランキング画面は後ほど他の修正と一緒にCommitします。

Change-Id: Ib86f04652362364f7da228d72725b8839cd11bcc

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -35,6 +35,9 @@
     <string name="permission_detail_dialog_content">・海外通信の利用確認のためSIM情報を取得</string>
     <string name="permission_detail_dialog_confirm">許可する</string>
     <string name="permission_detail_dialog_cancel">許可しない</string>
+    <string name="status_bar_height_name">status_bar_height</string>
+    <string name="status_bar_height_deftype">dimen</string>
+    <string name="status_bar_height_defpackage">android</string>
 
     <!-- Launch -->
     <string name="str_app_title">ドコモテレビターミナル</string>
