--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 <resources>
 
     <!-- Common -->
-    <string name="app_name">ドコモテレビターミナルアプリ</string>
+    <string name="app_name">ドコモテレビターミナル</string>
     <string name="contents_hyphen">-</string>
     <string name="positive_response">はい</string>
     <string name="negative_response">いいえ</string>
