DREM-270 プレミアムビデオ一覧
配信終了コンテンツ表示漏れ修正

Change-Id: I83a8662029c536ce4379d352cd6f2e7f7b28dc58

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -205,6 +205,7 @@
 
     <!-- レンタル -->
     <string name="rental_title">レンタル</string>
+    <string name="delivery_end_message">配信終了</string>
 
     <!--コンテンツ詳細-->
     <string name="contents_info_more_text">more</string>
