--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -234,6 +234,10 @@
         <item>番組詳細</item>
         <item>チャンネル</item>
     </string-array>
+    <string-array name="video_contents_detail_tabs">
+        <item>番組詳細</item>
+        <item>エピソード</item>
+    </string-array>
     <string name="recording_reservation_complete_dialog_msg">録画予約依頼を受け付けました。</string>
     <string name="recording_reservation_complete_dialog_ok">OK</string>
     <string name="recording_reservation_failed_dialog_msg">登録件数が一杯のため録画予約に失敗しました。</string>
