DREM-1723 コードレビュー指摘対応_簗瀬
指摘部分修正(詳細はチケットhttps://agile.apccloud.jp/jira/browse/DREM-1723)

Change-Id: Ib11e0751c7c2072045f5bc870e6de43271b47e87

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="clip_regist_error_message">のクリップに失敗しました</string>
     <string name="clip_delete_result_message">のクリップを削除しました</string>
     <string name="clip_delete_error_message">のクリップ削除に失敗しました</string>
+    <string name="clip_data_get_error_message">クリップデータ取得失敗</string>
     <string name="epg_contents_message">番組</string>
     <string name="vod_contents_message">ビデオ</string>
     <string name="app_finish_dialog_message">アプリを終了しますか？</string>
