--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -117,6 +117,13 @@
         <item>dTVチャンネル</item>
     </string-array>
 
+    <!-- チャンネルリスト STB未接続時 -->
+    <string-array name="channel_list_tab_names_no_paring">
+        <item>ひかりTV</item>
+        <item>dTVチャンネル</item>
+    </string-array>
+
+
     <!-- WatchingVideoActivity -->
     <string name="str_watching_video_activity_title">視聴中ビデオ</string>
 
