DREM-1896 [実装]([DREM-61]ワーディング適用)(dアカ関連)
・ワーディングリストの文字列を定義しました。

・初回起動時のみ、dアカウントの取得でエラーが発生した場合は、ダイアログを表示する処理を追加しました。

・ネットワークエラーの種類が確定したので、エラーコードを定義しました。通信APIのgetErrorメソッドでコードの取得は可能の筈ですが、メッセージ関連の処理はこれからです。

Change-Id: Ifc6530f273562eda21a6e5534315a2c48733ebe7

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -280,7 +280,7 @@
     <string name="paring_setting_select_text">ペアリングするドコモテレビターミナルを選択</string>
 
     <!-- 設定画面 -->
-    <string name="main_setting_d_account_message">dアカウントアプリがインストールされていません。\nインストールしますか？</string>
+    <string name="main_setting_d_account_message">dアカウント設定アプリがインストールされていません。\nインストールしますか？</string>
     <string name="main_setting_pairing">ペアリング済み</string>
     <string name="main_setting_not_paring">未ペアリング</string>
     <string name="main_setting_image_quality_low">標準画質</string>
@@ -290,6 +290,7 @@
     <string name="main_setting_application_info_header">アプリケーション情報</string>
     <string name="main_setting_quality_status">status</string>
     <string name="main_setting_stb_application_launch_fail">ドコモテレビターミナルのアプリの起動に失敗しました</string>
+    <string name="main_setting_stb_application_launch_fail_id_notexist">ドコモテレビターミナルのアプリの起動に失敗しました。本アプリでログインしているdアカウントのユーザーをドコモテレビターミナル（テレビ側）に登録してください。</string>
     <string name="main_setting_dtv_uninstall_message">ドコモテレビターミナルのdTVアプリはインストールされてない</string>
     <string name="main_setting_dtv_update_message">ドコモテレビターミナルのdTVアプリのバージョンアップが必要です</string>
     <string name="main_setting_d_anime_store_uninstall_message">ドコモテレビターミナルのdアニメストアの起動に失敗しました</string>
@@ -329,7 +330,7 @@
 
     <!-- dアカウント登録 -->
     <string name="d_account_regist_error">dアカウントの処理に失敗しました</string>
-    <string name="d_account_chamge_message">dアカウントが変更されたため、トップ画面に戻ります。</string>
+    <string name="d_account_chamge_message">dアカウントが変更されたため、ホームに戻ります。</string>
 
     <!-- お知らせ -->
     <string name="information_title">お知らせ</string>
